force-app/main/default/objects/Visitas__c/Visitas__c.object-meta.xml
<CustomObject>
    <label>Visita</label>
    <nameField>
        <label>Visitas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>