force-app/main/default/objects/Visitas__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <description>trae la dirrecion del cliente asociado a la visita</description>
    <label>Direccion</label>
    <type>Address</type>
</CustomField>