force-app/main/default/objects/Visitas__c/fields/Fecha_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Visita__c</fullName>
    <label>Fecha Visita</label>
    <type>DateTime</type>
</CustomField>