force-app/main/default/objects/Visitas__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>