force-app/main/default/objects/Visitas__c/fields/Tipo_de_Visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Visita__c</fullName>
    <label>Tipo de Visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Encuentra</fullName>
            </value>
            <value>
                <fullName>Gana</fullName>
            </value>
            <value>
                <fullName>Mantiene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>