force-app/main/default/objects/Visitas__c/listViews/Visitas_de_Hoy.listView-meta.xml
<ListView>
    <fullName>Visitas_de_Hoy</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <columns>Estado_de_la_visita__c</columns>
    <columns>Tipo_de_Visita__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Fecha_Visita__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Visitas de Hoy</label>
</ListView>